Revert "update test 2 titan"
This reverts commit 425ae899e823255638203cb723a84109a5ca1b55.

--- a/translations/titans_stronghold.tex/fr.po
+++ b/translations/titans_stronghold.tex/fr.po
@@ -54,7 +54,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Duree du Scenario}}\n"
+"\\subsection*{\\MakeUppercase{Durée du Scénario}}\n"
 "\n"
 
 #. type: multicols
