update titan final

--- a/translations/titans_stronghold.tex/fr.po
+++ b/translations/titans_stronghold.tex/fr.po
@@ -153,7 +153,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Événement programmés}}\n"
+"\\subsection*{\\MakeUppercase{Événements programmés}}\n"
 "\n"
 
 #. type: multicols*
@@ -177,7 +177,7 @@ msgid ""
 "\\addscenariosection{1}{Cooperative Scenario}{Titans' Stronghold}{\\images/"
 "earthquake.png}"
 msgstr ""
-"\\addscenariosection{1}{Mode coopératif}{La forteresse des Titans}{\\images/"
+"\\addscenariosection{1}{Mode coopératif}{La Forteresse des Titans}{\\images/"
 "earthquake.png}"
 
 #. type: multicols
@@ -213,9 +213,9 @@ msgid ""
 "\n"
 msgstr ""
 "\\textit{Il y a très longtemps, une puissante forteresse a été construite pour abriter les fantastiques et meurtriers Titans.\n"
-"  Personne n'y est jamais entré et n'est revenu pour raconter l'histoire.\n"
+"  Personne n'y est jamais entré et n'en est revenu pour raconter l'histoire.\n"
 "  Depuis, des rumeurs font état de la mort des gardiens et d'une quantité incroyable de trésors encore à l'intérieur, parmi lesquels pourrait se trouver le meilleur arc du monde.\\\\\n"
-"  Si la légende comme quoi le fort est vraie, il est temps de procéder à des fouilles.\\\\\n"
+"  Si la légende de ce fort est vraie, il est temps de procéder à des fouilles.\\\\\n"
 "  Mais pour l'instant, vous et vos alliés devez trouver les clés disséminées dans Antagarich pour pouvoir ouvrir la porte de la Forteresse des Titans.\n"
 "}\n"
 "\n"
@@ -227,7 +227,7 @@ msgid ""
 "This Scenario is played over 16 Rounds (15 on Impossible difficulty).\n"
 "\n"
 msgstr ""
-"Ce scénario se joue en 16 manches maximum (15 en difficulté impossible).\n"
+"Ce Scénario se joue en 16 manches maximum (15 en difficulté impossible).\n"
 "\n"
 
 #. type: multicols*
@@ -237,7 +237,7 @@ msgid ""
 "\\textbf{Player Count:} 1 -- 6\n"
 "\n"
 msgstr ""
-"\\textbf{Nombre de joueurs :} 1 -- 6\n"
+"\\textbf{Nombre de Joueurs :} 1 -- 6\n"
 "\n"
 
 #. type: multicols*
@@ -247,7 +247,7 @@ msgid ""
 "\\textbf{Starting Resources:} 30 \\svg{gold}, 8 \\svg{building_materials}, 2 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Ressources de départ :} 30 \\svg{gold}, 8 \\svg{building_materials}, 2 \\svg{valuables}\n"
+"\\textbf{Ressources de Départ :} 30 \\svg{gold}, 8 \\svg{building_materials}, 2 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols
@@ -263,7 +263,7 @@ msgid ""
 msgstr ""
 "\\textbf{Unités de départ :}\n"
 "\\begin{itemize}\n"
-"  \\item Un groupe d'unité \\bronze\\  de votre choix.\n"
+"  \\item Un groupe d'unités \\bronze\\ de votre choix.\n"
 "  \\item Quelques unités \\bronze\\ de votre choix.\n"
 "\\end{itemize}\n"
 "\n"
@@ -321,22 +321,26 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item J × Tuiles de Départ (I)\n"
+"  \\item 2J × Tuiles Lointaines (II--III)\n"
+"  \\item 2J × Tuiles Proches (IV--V)\n"
+"  \\item (J + 1) × Tuiles Centrales (VI--VII)\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:57
-#, fuzzy, no-wrap
-#| msgid ""
-#| "If you don't have enough VI--VII Tiles, you can use another Tile near Tile I.\n"
-#| "The center of this Tile is the Titans' Stronghold.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\MakeUppercase{Note:}} If you don’t have enough VI--VII Tiles, you can\n"
 "use another Tile near I Tiles. The center of this\n"
 "Tile is the Titans’ Stronghold.\n"
 "\n"
 msgstr ""
-"Si vous n'avez plus suffisamment de tuile VI--VII, vous pouvez utiliser une autre tuile à mettre à côté des tuiles I.\n"
-"Le centre de cette tuile est la Forteresse des Titans.\n"
+"\\textbf{\\MakeUppercase{Note:}} Si vous n'avez plus suffisamment de Tuiles VI--VII, vous pouvez\n"
+"utiliser une autre Tuile à mettre à côté des Tuiles I. Le centre de cette\n"
+"Tuile est la Forteresse des Titans.\n"
 "\n"
 
 #. type: multicols*
@@ -346,7 +350,7 @@ msgid ""
 "Kill all Units in the Titans' Stronghold (the center of Tile VI--VII next to Tiles I).\n"
 "\n"
 msgstr ""
-"Tuez toutes les unités dans la forteresse des titans (le centre de la tuile VI--VII proches des tuiles I).\n"
+"Tuez toutes les unités dans la Forteresse des titans (le centre de la Tuile VI--VII proches des Tuiles I).\n"
 "\n"
 
 #. type: multicols*
@@ -356,7 +360,7 @@ msgid ""
 "There are undefeated Units left in the Titans' Stronghold at the end of Round 16 (15 on Impossible difficulty).\n"
 "\n"
 msgstr ""
-"S'il reste des unités invaincues dans la forteresse des titans à la fin du tour 16 (15 en difficulté impossible).\n"
+"Il reste des unités invaincues dans la forteresse des titans à la fin du tour 16 (15 en difficulté impossible).\n"
 "\n"
 
 #. type: multicols*
@@ -381,7 +385,7 @@ msgid ""
 msgstr ""
 "\\textbf{4$^{e}$, 8$^{e}$ et 12$^{e}$ tours :}\n"
 "\\begin{itemize}\n"
-"  \\item Retirez tous les cubes noirs des moulins à eau, moulin à vent et jardins mystique sur le plateau.\n"
+"  \\item Retirez tous les Cubes Noirs des Moulins à Eau, Moulin à Vent et Jardins Mystique sur le plateau.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -395,10 +399,10 @@ msgid ""
 "  \\item No one can enter the Titans' Stronghold until all other VII Fields are flagged by any player.\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Règles additionnelles du scénario}}\n"
+"\\subsection*{\\MakeUppercase{Règles additionnelles}}\n"
 "\\begin{itemize}\n"
-"  \\item Rappel : Le centre de la tuile VI--VII adjacente aux tuiles I est la forteresse des titans.\n"
-"  \\item Personne ne peut entrer dans la forteresse des titans tant que toutes les autres case VII ne sont pas revendiqués par au moins un joueur.\n"
+"  \\item Rappel : Le centre de la Tuile VI--VII adjacente aux Tuiles I est la Forteresse des Titans.\n"
+"  \\item Personne ne peut entrer dans la Forteresse des Titans tant que toutes les autres case VII ne sont pas revendiqués par au moins un joueur.\n"
 "\n"
 
 #. type: multicols*
@@ -415,14 +419,14 @@ msgid ""
 "  (There is no bonus in solo play!)\n"
 "\n"
 msgstr ""
-"  \\item Après avoir vaincus une armée neutre de difficulté VII, à la place de résouvre la case, le joueurs choisis 3 options dans la liste suivante (une même option peut-être choisis plusieurs fois) :\n"
+"  \\item Après avoir vaincus une armée Neutre de difficulté VII, à la place de résouvre la case, le joueurs choisis 3 options dans la liste suivante (une même option peut-être choisis plusieurs fois) :\n"
 "    \\begin{itemize}\n"
 "      \\item Un autre joueur (de votre choix) gagne 5\\,\\svg{gold}\n"
 "      \\item Un autre joueur (de votre choix) gagne 2\\,\\svg{building_materials}\n"
 "      \\item Un autre joueur (de votre choix) gagne 1\\,\\svg{valuables}\n"
 "    \\end{itemize}\n"
 "  Ensuite, revendiqué la case VII avec un cube de votre faction.\n"
-"  (Il n'y a pas de bonus pour un jeu en solitaire !)\n"
+"  (Il n'y a pas de bonus pour une partie solo!)\n"
 "\n"
 
 #. type: multicols*
@@ -434,9 +438,9 @@ msgid ""
 "  \\item Two players can use their build Tokens to exchange Artifacts and/or Spells.\n"
 "\n"
 msgstr ""
-"  \\item Ignorez toutes les bordures jaunes sur les tuiles de départ (I).\n"
-"  \\item Vous pouvez utiliser votre jeton de construction pour pouvoir donner des ressources à un autre joueur.\n"
-"  \\item Deux joueurs peuvent utiliser leur jeton de construction pour pouvoir échanger des artefacts et/ou des sorts.\n"
+"  \\item Ignorez toutes les bordures jaunes sur les Tuiles de Départ (I).\n"
+"  \\item Vous pouvez utiliser votre jJeton de Construction pour pouvoir donner des ressources à un autre joueur.\n"
+"  \\item Deux joueurs peuvent utiliser leur Jeton de Construction pour pouvoir échanger des Artefacts et/ou des Sorts.\n"
 "\n"
 
 #. type: multicols*
@@ -447,8 +451,8 @@ msgid ""
 "  \\item When all VII Fields (excluding the Titans' Stronghold) are flagged, randomly draw and shuffle the specified number (see the next page) of Neutral Unit Cards from each of their corresponding Decks to create a separate Deck of Neutral Units for the Titans' Stronghold (the Deck of the Titans' Stronghold is sometimes split in two because certain Scenarios are otherwise impossible to implement with the Cards from certain expansions).\n"
 "\n"
 msgstr ""
-"  \\item A chaque fois qu'un joueur se déplace sur un obélisque, il lance un dé de ressource et 1 dé de trésor, et choisit 1 résultat.\n"
-"  \\item Quand toutes les cases VII (à l'exception de la forteresse des titans) sont revendiquées, Tirez au hasard le nombre spécifié (voir page suivante) d'unité neutre de chaque pile correspondante afin de former un paquet d'unités distinctes utilisé pour les combats dans la forteresse des titans (Le paquet de la forteresse des titans est certaine fois coupé en deux paquets (le deuxième est à composé après avoir fini le premier) car sinon certaine configuration serais impossible à implémenter en fonction des extensions possédées).\n"
+"  \\item A chaque fois qu'un joueur explore un obélisque, il lance un dé de ressource et 1 dé de trésor, et choisit 1 résultat.\n"
+"  \\item Quand toutes les cases VII (à l'exception de la Forteresse des Titans) sont revendiquées, Tirez au hasard le nombre spécifié (voir page suivante) d'unité neutre de chaque pile correspondante afin de former un paquet d'unités distinctes utilisé pour les combats dans la Forteresse des Titans (Le paquet de la Forteresse des Titans est certaine fois coupé en deux paquets, le deuxième est à composé après avoir fini le premier car sinon certaine configuration serait impossible à implémenter en fonction des extensions possédées).\n"
 "\n"
 
 #. type: multicols*
@@ -465,12 +469,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"  \\item Chaque fois qu'un héros entre dans la forteresse des titans, il pioche 5 cartes du paquet de l'armée de la forteresse des titans à la place des piles habituelles. Ces unités sont placées sur le plateau de combat (voir page 29 du livre de règles, ``Préparation des unités neutres''). Le joueur doit tenter de vaincre les créatures aussi piochées. Toutes les unités neutres vaincus sont remises dans leurs piles d'unités neutres respectives, plutôt que dans le paquet spécial. Toutes les unités neutres qui survivent à un combat dans la forteresse des titans sont remélangées dans le paquet de l'armée de la forteresse des titans. S'il y reste moins de 5 unités dans le paquet de l'armée de la forteresse des titans, placez uniquement les unités restantes sur le plateau combat.\n"
+"  \\item Chaque fois qu'un Héros entre dans la Forteresse des Titans, il pioche 5 cartes du paquet de l'armée de la Forteresse des Titans à la place des piles habituelles. Ces Unités sont placées sur le plateau de combat (voir page 29 du livre de règles, ``Préparation des unités neutres''). Le joueur tente de vaincre les créatures ainsi piochées. Toutes les unités neutres vaincus sont remises dans leurs piles d'unités neutres respectives, plutôt que dans le paquet spécial. Toutes les unités neutres qui survivent à un combat dans la Forteresse des Titans sont remélangées dans le paquet de l'armée de la Forteresse des Titans. S'il y reste moins de 5 unités dans le paquet de l'armée de la Forteresse des Titans, placez uniquement les unités restantes sur le plateau combat.\n"
 "  \\item Prolonger un combat dans la forteresse des titans coute un point de déplacement (comme pour un combat contre des unités non azure).\n"
 "  \\item Par ailleurs, les joueurs ne peuvent pas :\n"
 "  \\begin{itemize}\n"
 "    \\item Attaquer les autres Héros.\n"
-"    \\item Capturer une Mine ou une Enclave déjà contrôlée.\n"
+"    \\item Capturer une Mine ou une Enclave déjà revendiquée.\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
@@ -491,51 +495,6 @@ msgstr ""
 
 #. type: Plain text
 #: coops/titans_stronghold.tex:193
-#, fuzzy
-#| msgid ""
-#| "\\hommtable[]{28}{ \\centering \\medskip \\textbf{Strength of Titans' "
-#| "Stronghold Armies}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]"
-#| "{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} "
-#| "\\newcommand{\\golden}[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]"
-#| "{\\svg[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}"
-#| "XXXX} & \\darkcell{Easy} & \\darkcell{Normal} & \\darkcell{Hard} & "
-#| "\\darkcell{Impossible}\\\\ \\darkcell[1.2]{1 player} & \\lightcell[1.2]"
-#| "{3\\bronze 2\\silver 1\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze "
-#| "2\\silver 2\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver "
-#| "2\\golden 2\\azure} & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden "
-#| "3\\azure}\\\\ \\darkcell[1.2]{2 players} & \\lightcell[1.2]{5\\bronze "
-#| "5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]{4\\bronze 5\\silver "
-#| "3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden "
-#| "3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
-#| "\\darkcell[1.8]{3 players} & \\lightcell[1.8]{8\\bronze 7\\silver "
-#| "4\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden "
-#| "3\\azure} & \\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure "
-#| "\\linebreak Then\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} & "
-#| "\\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak "
-#| "Then\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ "
-#| "\\darkcell[1.8]{4 players} & \\lightcell[1.8]{10\\bronze 10\\silver "
-#| "6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden "
-#| "4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure "
-#| "\\linebreak Then\\linebreak 2\\bronze 5\\silver 5\\golden 3\\azure} & "
-#| "\\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak "
-#| "Then\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
-#| "\\darkcell[1.8]{5 players} & \\lightcell[1.8]{6\\bronze 6\\silver "
-#| "4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 6\\silver "
-#| "3\\golden 2\\azure} & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden "
-#| "2\\azure \\linebreak Then\\linebreak 5\\bronze 6\\silver 4\\golden "
-#| "3\\azure} & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure "
-#| "\\linebreak Then\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} & "
-#| "\\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak "
-#| "Then\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ "
-#| "\\darkcell[1.8]{6 players} & \\lightcell[1.8]{8\\bronze 8\\silver "
-#| "4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 7\\silver "
-#| "5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden "
-#| "3\\azure \\linebreak Then\\linebreak 6\\bronze 7\\silver 5\\golden "
-#| "3\\azure} & \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure "
-#| "\\linebreak Then\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} & "
-#| "\\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak "
-#| "Then\\linebreak 3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ "
-#| "\\end{tabularx} }"
 msgid ""
 "\\hommtable[]{28}{ \\centering \\medskip \\textbf{Strength of Titans' "
 "Stronghold Armies}\\\\ \\bigskip \\let\\origbronze\\bronze "
@@ -581,7 +540,7 @@ msgid ""
 "3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ \\end{tabularx} }"
 msgstr ""
 "\\hommtable[]{28}{ \\centering \\medskip \\textbf{Force des armées dans la "
-"forteresse des titans}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]"
+"Forteresse des Titans}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]"
 "{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}"
 "[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
 "\\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & "
@@ -624,10 +583,6 @@ msgstr ""
 
 #. type: center
 #: coops/titans_stronghold.tex:199
-#, fuzzy
-#| msgid ""
-#| "\\transparent{0.3}{\\includegraphics[width=0.6\\linewidth, "
-#| "keepaspectratio]{\\art/land_mine.png}}"
 msgid ""
 "\\transparent{0.2}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]"
 "{\\art/land_mine.png}}"
@@ -637,12 +592,7 @@ msgstr ""
 
 #. type: tikzpicture
 #: coops/titans_stronghold.tex:207
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{center}\n"
-#| "  \\includegraphics[width=\\linewidth]{\\art/dimension_door.png}\n"
-#| "\\end{center}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "[remember picture, overlay]\n"
 "  \\node(bg)[anchor=center, opacity=0.07] at (current page.center) {\n"
