--- a/translations/titans_stronghold.tex/fr.po
+++ b/translations/titans_stronghold.tex/fr.po
@@ -399,7 +399,7 @@ msgid ""
 "  \\item No one can enter the Titans' Stronghold until all other VII Fields are flagged by any player.\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Règles additionnelles}}\n"
+"\\subsection*{\\MakeUppercase{Règles Additionnelles}}\n"
 "\\begin{itemize}\n"
 "  \\item Rappel : Le centre de la Tuile VI--VII adjacente aux Tuiles I est la Forteresse des Titans.\n"
 "  \\item Personne ne peut entrer dans la Forteresse des Titans tant que toutes les autres case VII ne sont pas revendiqués par au moins un joueur.\n"
