--- a/translations/titans_stronghold.tex/fr.po
+++ b/translations/titans_stronghold.tex/fr.po
@@ -372,6 +372,12 @@ msgid ""
 "\\end{tikzpicture}\n"
 "\n"
 msgstr ""
+"\\begin{tikzpicture}[overlay]\n"
+"  \\begin{scope}[transform canvas={cm={-1,0,0,1,(0,0)}}]\n"
+"    \\node[inner sep=0pt, opacity=0.2] at (0.3, -5) {\\includegraphics[width=0.85\\linewidth, keepaspectratio]{\\art/shackles_of_war.png}};\n"
+"  \\end{scope}\n"
+"\\end{tikzpicture}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:76
@@ -489,7 +495,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{center}\n"
-"  \\transparent{0.2}{\\includegraphics[width=0.5\\linewidth]{\\art/dimension_door.png}}\n"
+"  \\transparent{0.2}{\\includegraphics[width=0.6\\linewidth]{\\art/dimension_door.png}}\n"
 "\\end{center}\n"
 "\n"
 
@@ -540,46 +546,47 @@ msgid ""
 "3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ \\end{tabularx} }"
 msgstr ""
 "\\hommtable[]{28}{ \\centering \\medskip \\textbf{Force des armées dans la "
-"Forteresse des Titans}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]"
-"{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}"
-"[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
-"\\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & "
-"\\darkcell{Facile} & \\darkcell{Normal} & \\darkcell{Difficile} & "
-"\\darkcell{Impossible}\\\\ \\darkcell[1.2]{1 joueur} & \\lightcell[1.2]"
-"{3\\bronze 2\\silver 1\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze "
-"2\\silver 2\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver "
-"2\\golden 2\\azure} & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden "
-"3\\azure}\\\\ \\darkcell[1.2]{2 joueurs} & \\lightcell[1.2]{5\\bronze "
-"5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]{4\\bronze 5\\silver "
-"3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden "
-"3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
-"\\darkcell[1.8]{3 joueurs} & \\lightcell[1.8]{8\\bronze 7\\silver 4\\golden "
-"2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden 3\\azure} & "
-"\\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure \\linebreak "
-"Puis\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} & \\lightcell[1.8]"
-"{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak Puis\\linebreak "
-"1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ \\darkcell[1.8]{4 joueurs} & "
-"\\lightcell[1.8]{10\\bronze 10\\silver 6\\golden 2\\azure} & \\lightcell[1.8]"
-"{8\\bronze 10\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{2\\bronze "
-"5\\silver 5\\golden 3\\azure \\linebreak Puis\\linebreak 2\\bronze 5\\silver "
-"5\\golden 3\\azure} & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden "
-"4\\azure \\linebreak Puis\\linebreak 1\\bronze 5\\silver 7\\golden "
-"4\\azure}\\\\ \\darkcell[1.8]{5 joueurs} & \\lightcell[1.8]{6\\bronze "
-"6\\silver 4\\golden 1\\azure \\linebreak Puis\\linebreak 7\\bronze 6\\silver "
-"3\\golden 2\\azure} & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden "
-"2\\azure \\linebreak Puis\\linebreak 5\\bronze 6\\silver 4\\golden 3\\azure} "
-"& \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak "
-"Puis\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} & \\lightcell[1.8]"
-"{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak Puis\\linebreak "
-"2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ \\darkcell[1.8]{6 joueurs} & "
-"\\lightcell[1.8]{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak "
-"Puis\\linebreak 7\\bronze 7\\silver 5\\golden 2\\azure} & \\lightcell[1.8]"
-"{6\\bronze 8\\silver 4\\golden 3\\azure \\linebreak Puis\\linebreak "
-"6\\bronze 7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze "
-"8\\silver 7\\golden 5\\azure \\linebreak Puis\\linebreak 3\\bronze 7\\silver "
-"8\\golden 4\\azure} & \\lightcell[1.8]{3\\bronze 7\\silver 11\\golden "
-"6\\azure \\linebreak Puis\\linebreak 3\\bronze 8\\silver 10\\golden "
-"6\\azure}\\\\ \\end{tabularx} }"
+"Forteresse des Titans}\\\\ \\bigskip \\let\\origbronze\\bronze "
+"\\let\\origsilver\\silver \\let\\origgolden\\golden \\let\\origazure\\azure "
+"\\renewcommand{\\bronze}{\\origbronze[12]} \\renewcommand{\\silver}"
+"{\\origsilver[12]} \\renewcommand{\\golden}{\\origgolden[12]} "
+"\\renewcommand{\\azure}{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}"
+"{p{0.15\\linewidth}XXXX} & \\darkcell{Facile} & \\darkcell{Normal} & "
+"\\darkcell{Difficile} & \\darkcell{Impossible}\\\\ \\darkcell[1.2]{1 joueur} "
+"& \\lightcell[1.2]{3\\bronze 2\\silver 1\\golden 1\\azure} & \\lightcell[1.2]"
+"{2\\bronze 2\\silver 2\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze "
+"2\\silver 2\\golden 2\\azure} & \\lightcell[1.2]{1\\bronze 2\\silver "
+"2\\golden 3\\azure}\\\\ \\darkcell[1.2]{2 joueurs} & \\lightcell[1.2]"
+"{5\\bronze 5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]{4\\bronze "
+"5\\silver 3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze 5\\silver "
+"5\\golden 3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden "
+"4\\azure}\\\\ \\darkcell[1.8]{3 joueurs} & \\lightcell[1.8]{8\\bronze "
+"7\\silver 4\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver "
+"5\\golden 3\\azure} & \\lightcell[1.8]{2\\bronze 3\\silver 4\\golden "
+"3\\azure \\linebreak Puis\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} "
+"& \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak "
+"Puis\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ \\darkcell[1.8]"
+"{4 joueurs} & \\lightcell[1.8]{10\\bronze 10\\silver 6\\golden 2\\azure} & "
+"\\lightcell[1.8]{8\\bronze 10\\silver 6\\golden 4\\azure} & \\lightcell[1.8]"
+"{2\\bronze 5\\silver 5\\golden 3\\azure \\linebreak Puis\\linebreak "
+"2\\bronze 5\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{1\\bronze "
+"5\\silver 7\\golden 4\\azure \\linebreak Puis\\linebreak 1\\bronze 5\\silver "
+"7\\golden 4\\azure}\\\\ \\darkcell[1.8]{5 joueurs} & \\lightcell[1.8]"
+"{6\\bronze 6\\silver 4\\golden 1\\azure \\linebreak Puis\\linebreak "
+"7\\bronze 6\\silver 3\\golden 2\\azure} & \\lightcell[1.8]{5\\bronze "
+"6\\silver 4\\golden 2\\azure \\linebreak Puis\\linebreak 5\\bronze 6\\silver "
+"4\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden "
+"4\\azure \\linebreak Puis\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} "
+"& \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak "
+"Puis\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ \\darkcell[1.8]"
+"{6 joueurs} & \\lightcell[1.8]{8\\bronze 8\\silver 4\\golden 1\\azure "
+"\\linebreak Puis\\linebreak 7\\bronze 7\\silver 5\\golden 2\\azure} & "
+"\\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure \\linebreak "
+"Puis\\linebreak 6\\bronze 7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]"
+"{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak Puis\\linebreak "
+"3\\bronze 7\\silver 8\\golden 4\\azure} & \\lightcell[1.8]{3\\bronze "
+"7\\silver 11\\golden 6\\azure \\linebreak Puis\\linebreak 3\\bronze "
+"8\\silver 10\\golden 6\\azure}\\\\ \\end{tabularx} }"
 
 #. type: center
 #: coops/titans_stronghold.tex:199
