--- a/translations/titans_stronghold.tex/fr.po
+++ b/translations/titans_stronghold.tex/fr.po
@@ -360,7 +360,7 @@ msgid ""
 "There are undefeated Units left in the Titans' Stronghold at the end of Round 16 (15 on Impossible difficulty).\n"
 "\n"
 msgstr ""
-"Il reste des unités invaincues dans la forteresse des titans à la fin du tour 16 (15 en difficulté impossible).\n"
+"Il reste des unités invaincues dans la Forteresse des Titans à la fin du tour 16 (15 en difficulté impossible).\n"
 "\n"
 
 #. type: multicols*
@@ -391,7 +391,7 @@ msgid ""
 msgstr ""
 "\\textbf{4$^{e}$, 8$^{e}$ et 12$^{e}$ tours :}\n"
 "\\begin{itemize}\n"
-"  \\item Retirez tous les Cubes Noirs des Moulins à Eau, Moulin à Vent et Jardins Mystique sur le plateau.\n"
+"  \\item Retirez tous les Cubes Noirs des Moulins à Eau, Moulins à Vent et Jardins Mystiques sur le plateau.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -408,7 +408,7 @@ msgstr ""
 "\\subsection*{\\MakeUppercase{Règles Additionnelles}}\n"
 "\\begin{itemize}\n"
 "  \\item Rappel : Le centre de la Tuile VI--VII adjacente aux Tuiles I est la Forteresse des Titans.\n"
-"  \\item Personne ne peut entrer dans la Forteresse des Titans tant que toutes les autres case VII ne sont pas revendiqués par au moins un joueur.\n"
+"  \\item Personne ne peut entrer dans la Forteresse des Titans tant que toutes les autres cases VII ne sont pas revendiquées par au moins un joueur.\n"
 "\n"
 
 #. type: multicols*
@@ -425,13 +425,13 @@ msgid ""
 "  (There is no bonus in solo play!)\n"
 "\n"
 msgstr ""
-"  \\item Après avoir vaincus une armée Neutre de difficulté VII, à la place de résouvre la case, le joueurs choisis 3 options dans la liste suivante (une même option peut-être choisis plusieurs fois) :\n"
+"  \\item Après avoir vaincu une armée Neutre de difficulté VII, à la place de résoudre la case, le joueur choisit 3 options dans la liste suivante (une même option peut être choisie plusieurs fois) :\n"
 "    \\begin{itemize}\n"
 "      \\item Un autre joueur (de votre choix) gagne 5\\,\\svg{gold}\n"
 "      \\item Un autre joueur (de votre choix) gagne 2\\,\\svg{building_materials}\n"
 "      \\item Un autre joueur (de votre choix) gagne 1\\,\\svg{valuables}\n"
 "    \\end{itemize}\n"
-"  Ensuite, revendiqué la case VII avec un cube de votre faction.\n"
+"  Ensuite, revendiquez la case VII avec un cube de votre faction.\n"
 "  (Il n'y a pas de bonus pour une partie solo!)\n"
 "\n"
 
@@ -445,7 +445,7 @@ msgid ""
 "\n"
 msgstr ""
 "  \\item Ignorez toutes les bordures jaunes sur les Tuiles de Départ (I).\n"
-"  \\item Vous pouvez utiliser votre jJeton de Construction pour pouvoir donner des ressources à un autre joueur.\n"
+"  \\item Vous pouvez utiliser votre Jeton de Construction pour pouvoir donner des ressources à un autre joueur.\n"
 "  \\item Deux joueurs peuvent utiliser leur Jeton de Construction pour pouvoir échanger des Artefacts et/ou des Sorts.\n"
 "\n"
 
@@ -458,7 +458,7 @@ msgid ""
 "\n"
 msgstr ""
 "  \\item A chaque fois qu'un joueur explore un obélisque, il lance un dé de ressource et 1 dé de trésor, et choisit 1 résultat.\n"
-"  \\item Quand toutes les cases VII (à l'exception de la Forteresse des Titans) sont revendiquées, Tirez au hasard le nombre spécifié (voir page suivante) d'unité neutre de chaque pile correspondante afin de former un paquet d'unités distinctes utilisé pour les combats dans la Forteresse des Titans (Le paquet de la Forteresse des Titans est certaine fois coupé en deux paquets, le deuxième est à composé après avoir fini le premier car sinon certaine configuration serait impossible à implémenter en fonction des extensions possédées).\n"
+"  \\item Quand toutes les cases VII (à l'exception de la Forteresse des Titans) sont revendiquées, tirez au hasard le nombre spécifié (voir page suivante) d'unités neutres de chaque pile correspondante afin de former un paquet d'unités distinctes utilisé pour les combats dans la Forteresse des Titans (Le paquet de la Forteresse des Titans est parfois coupé en deux paquets, le deuxième est composé après avoir fini le premier car sinon certaines configurations seraient impossibles à implémenter en fonction des extensions possédées).\n"
 "\n"
 
 #. type: multicols*
@@ -475,8 +475,8 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"  \\item Chaque fois qu'un Héros entre dans la Forteresse des Titans, il pioche 5 cartes du paquet de l'armée de la Forteresse des Titans à la place des piles habituelles. Ces Unités sont placées sur le plateau de combat (voir page 29 du livre de règles, ``Préparation des unités neutres''). Le joueur tente de vaincre les créatures ainsi piochées. Toutes les unités neutres vaincus sont remises dans leurs piles d'unités neutres respectives, plutôt que dans le paquet spécial. Toutes les unités neutres qui survivent à un combat dans la Forteresse des Titans sont remélangées dans le paquet de l'armée de la Forteresse des Titans. S'il y reste moins de 5 unités dans le paquet de l'armée de la Forteresse des Titans, placez uniquement les unités restantes sur le plateau combat.\n"
-"  \\item Prolonger un combat dans la forteresse des titans coute un point de déplacement (comme pour un combat contre des unités non azure).\n"
+"  \\item Chaque fois qu'un Héros entre dans la Forteresse des Titans, il pioche 5 cartes du paquet de l'armée de la Forteresse des Titans à la place des piles habituelles. Ces Unités sont placées sur le plateau de combat (voir page 29 du livre de règles, ``Préparation des unités neutres''). Le joueur tente de vaincre les créatures ainsi piochées. Toutes les unités neutres vaincues sont remises dans leurs piles d'unités neutres respectives, plutôt que dans le paquet spécial. Toutes les unités neutres qui survivent à un combat dans la Forteresse des Titans sont remélangées dans le paquet de l'armée de la Forteresse des Titans. S'il y reste moins de 5 unités dans le paquet de l'armée de la Forteresse des Titans, placez uniquement les unités restantes sur le plateau de combat.\n"
+"  \\item Prolonger un combat dans la Forteresse des Titans coûte un point de déplacement (comme pour un combat contre des unités non azures).\n"
 "  \\item Par ailleurs, les joueurs ne peuvent pas :\n"
 "  \\begin{itemize}\n"
 "    \\item Attaquer les autres Héros.\n"
