--- a/translations/titans_stronghold.tex/fr.po
+++ b/translations/titans_stronghold.tex/fr.po
@@ -213,7 +213,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\textit{Il y a très longtemps, une puissante forteresse a été construite pour abriter les fantastiques et meurtriers Titans.\n"
-"  Personne y étant entré et n'est revenu pour en raconter l'histoire.\n"
+"  Personne n'y étant entré et n'est revenu pour en raconter l'histoire.\n"
 "  Depuis, des rumeurs font état de la mort des gardiens et d'une quantité incroyable de trésors encore à l'intérieur, parmi lesquels pourrait se trouver le meilleur arc du monde.\\\\\n"
 "  Si la légende de cette forteresse est vraie, il est temps de procéder à des fouilles.\\\\\n"
 "  Mais pour l'instant, vous et vos alliés devrez trouver les clés disséminées dans Antagarich pour pouvoir ouvrir la porte de la Forteresse des Titans.\n"
