--- a/translations/back_cover.tex/fr.po
+++ b/translations/back_cover.tex/fr.po
@@ -1,11 +1,11 @@
-# French translations for PACKAGE package
+# French translations for Homm package
 # Copyright (C) 2025 Free Software Foundation, Inc.
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the Homm package.
 # Automatically generated, 2025.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-03-26 09:51+0000\n"
 "PO-Revision-Date: 2025-03-26 09:51+0000\n"
 "Last-Translator: Automatically generated\n"
