--- a/translations/credits.tex/fr.po
+++ b/translations/credits.tex/fr.po
@@ -1,22 +1,20 @@
 # French translations for Homm package
-# Copyright (C) 2024 Free Software Foundation, Inc.
+# Copyright (C) 2025 Free Software Foundation, Inc.
 # This file is distributed under the same license as the Homm package.
-# Automatically generated, 2024.
+# Automatically generated, 2025.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-05-08 21:05+0200\n"
-"PO-Revision-Date: 2025-05-15 08:02+0000\n"
-"Last-Translator: SkullsuiT <jfdswhaos@gmail.com>\n"
-"Language-Team: French <https://hosted.weblate.org/projects/homm3bg-fan-made-"
-"mission-book/sections/credits/fr/>\n"
+"PO-Revision-Date: 2025-05-08 21:05+0200\n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 5.12-dev\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -53,7 +51,7 @@ msgid ""
 "\\columnbreak\n"
 "\n"
 msgstr ""
-"\\columnbreak\n"
+"\\vspace*{\\fill}\\columnbreak\n"
 "\n"
 
 #. type: multicols*
