--- a/translations/what_to_play.tex/fr.po
+++ b/translations/what_to_play.tex/fr.po
@@ -1,22 +1,20 @@
 # French translations for Homm package
-# Copyright (C) 2024 Free Software Foundation, Inc.
+# Copyright (C) 2025 Free Software Foundation, Inc.
 # This file is distributed under the same license as the Homm package.
-# Automatically generated, 2024.
+# Automatically generated, 2025.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-04-14 07:17+0100\n"
-"PO-Revision-Date: 2025-05-16 12:06+0000\n"
-"Last-Translator: Nohud <nohud@hotmail.fr>\n"
-"Language-Team: French <https://hosted.weblate.org/projects/homm3bg-fan-made-"
-"mission-book/sections/what_to_play/fr/>\n"
+"PO-Revision-Date: 2025-04-14 07:17+0100\n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 5.12-dev\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -47,7 +45,7 @@ msgstr ""
 #. type: Plain text
 #: sections/what_to_play.tex:3
 msgid "\\addsection{What to Play}{\\images/forgetfulness.png}"
-msgstr "\\addsection{Comment jouer}{\\images/forgetfulness.png}"
+msgstr ""
 
 #. type: multicols
 #: sections/what_to_play.tex:7
@@ -56,16 +54,19 @@ msgid ""
 "Follow these suggestions if you're not sure which Scenario is best for you.\n"
 "\n"
 msgstr ""
-"Suivez ces suggestions si vous n'êtes pas sûr du scénario qui vous convient le mieux.\n"
-"\n"
 
 #. type: multicols
 #: sections/what_to_play.tex:9
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\subsection*{\\MakeUppercase{Timed Events}}\n"
+#| "\n"
 msgid ""
 "\\subsection*{Cooperative Mode}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Événement programmés}}\n"
+"\n"
 
 #. type: multicols
 #: sections/what_to_play.tex:13
@@ -97,11 +98,16 @@ msgstr ""
 
 #. type: multicols
 #: sections/what_to_play.tex:21
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\subsection*{\\MakeUppercase{Timed Events}}\n"
+#| "\n"
 msgid ""
 "\\subsection*{Campaign}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Événement programmés}}\n"
+"\n"
 
 #. type: multicols
 #: sections/what_to_play.tex:23
@@ -113,11 +119,16 @@ msgstr ""
 
 #. type: multicols
 #: sections/what_to_play.tex:25
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
+#| "\n"
 msgid ""
 "\\subsection*{Recommendations}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Conditions de Défaite}}\n"
+"\n"
 
 #. type: multicols
 #: sections/what_to_play.tex:27
